circleci: build docker image on tag push

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 
 jobs:
   test:
@@ -23,9 +23,44 @@ jobs:
             . venv/bin/activate
             tox
 
+  build:
+    docker:
+      - image: circleci/buildpack-deps:stretch
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build docker image
+          command: |
+            docker build -t openmaraude/geotaxi-python:${CIRCLE_TAG} .
+            docker tag openmaraude/geotaxi-python:${CIRCLE_TAG} openmaraude/geotaxi-python:latest
+      - run:
+          name: Publish docker Image to hub.docker.com
+          command: |
+            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push openmaraude/geotaxi-python:${CIRCLE_TAG}
+            docker push openmaraude/geotaxi-python:latest
+
 workflows:
   version: 2
 
   test:
     jobs:
       - test
+
+  # Build artifacts, ignore all branches, only run for all tags.
+  artifacts:
+    jobs:
+      - test:
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /.*/
+
+      - build:
+          requires:
+            - test
+          filters:
+            tags:
+              only: /.*/
