--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,24 +3,15 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/python:3
-
-    working_directory: ~/repo
-
+      - image: openmaraude/geotaxi-python-devenv:latest
+        auth:
+          username: ${DOCKERHUB_USERNAME}
+          password: ${DOCKERHUB_PASS}
     steps:
       - checkout
-
-      - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install tox
-
       - run:
           name: run tests
           command: |
-            . venv/bin/activate
             tox
 
   build:
