--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,24 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: openmaraude/geotaxi-python-devenv:latest
-        auth:
-          username: ${DOCKERHUB_USERNAME}
-          password: ${DOCKERHUB_PASS}
+      - image: cimg/python:3.8
+
+    working_directory: ~/repo
+
     steps:
       - checkout
+
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install tox
+
       - run:
           name: run tests
           command: |
+            . venv/bin/activate
             tox
 
   build:
