--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,8 @@ orbs:
 
 jobs:
   test:
-    executor: python/default
+    docker:
+      - image: cimg/python:3.8.10
     steps:
       - checkout
       - python/install-packages:
