--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - checkout
       - python/install-packages:
+          args: .
           pkg-manager: pip
       - python/install-packages:
           args: tox
