--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install tox
+            pip install ".[tests]"
 
       - run:
           name: run tests
           command: |
             . venv/bin/activate
-            tox
+            pytest
 
   build:
     docker:
